--- a/app/src/App.css
+++ b/app/src/App.css
@@ -23,6 +23,13 @@
   color: #61dafb;
 }
 
+.Spinner{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  margin: 2rem
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
